# python-monorepo-template

./: .gitignore  .pre-commit-config.yaml  FILES_CREATED.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  TEMPLATE.md  add_package.py  pyproject.toml  ruff.toml  setup_template.py
.github/: TEMPLATE.json  dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
