[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-monorepo"
version = "0.1.0"
description = "A Python monorepo using uv workspaces"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}

[tool.uv]
workspace = [
    { path = "packages/my-library" },
    { path = "packages/my-app" },
    { path = "packages/my-cli" },
]

[tool.uv.sources]
my-library = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=. --cov-report=term-local-skip=100"
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
