[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
workspace = [
    ["packages/my-library"],
    ["packages/my-app"],
    ["packages/my-cli"],
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=. --cov-report=term-local-skip=100"
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
